--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<selenium.version>2.42.2</selenium.version>
 		<jetty.version>7.6.15.v20140411</jetty.version>
 		<h2.version>1.3.176</h2.version>
-		<lucene.version>5.3.0</lucene.version>
+		<lucene.version>5.0.0</lucene.version>
 		<!-- Plugin的属性定义 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
@@ -59,33 +59,41 @@
 
 		<!--LUCENE Begin -->
 		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-core</artifactId>
-			<version>5.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-queryparser</artifactId>
-			<version>5.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers-common</artifactId>
-			<version>5.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-highlighter</artifactId>
-			<version>5.3.0</version>
-		</dependency>
-				<dependency>
 	<groupId>org.apache.lucene</groupId>
 	<artifactId>lucene-analyzers-smartcn</artifactId>
 	<version>5.3.0</version>
 </dependency>
 		
-		<!--LUCENE End -->
+	<dependency>
+	<groupId>org.apache.lucene</groupId>
+	<artifactId>lucene-core</artifactId>
+	<version>5.0.0</version>
+    </dependency>
+	<dependency>
+	<groupId>org.apache.lucene</groupId>
+	<artifactId>lucene-queryparser</artifactId>
+	<version>5.0.0</version>
+</dependency>
 
+		<dependency>
+	<groupId>org.apache.lucene</groupId>
+	<artifactId>lucene-analyzers-common</artifactId>
+	<version>5.0.0</version>
+</dependency>
+
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-highlighter</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+
+		
+		<!--LUCENE End -->
+<dependency>
+ <groupId>org.wltea.analyzer</groupId>
+ <artifactId>IKAnalyzer</artifactId>
+ <version>5.0</version>
+</dependency>
 		<!-- SPRINGSIDE -->
 		<dependency>
 			<groupId>org.springside</groupId>
