--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,8 +59,40 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	
+	<servlet>
+	    <servlet-name>transmitServlet</servlet-name>
+	    <servlet-class>org.mitre.dsmiley.httpproxy.ProxyServlet</servlet-class>
+	    <init-param>
+	        <param-name>targetUri</param-name>
+	        <param-value>http://172.21.15.159:8086/</param-value>
+	    </init-param>
+	    <init-param>
+	        <param-name>log</param-name>
+	        <param-value>true</param-value>
+	    </init-param>
+	</servlet>
+		<servlet-mapping>
+	    <servlet-name>transmitServlet</servlet-name>
+	    <url-pattern>/transmit/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+	    <servlet-name>wechatServlet</servlet-name>
+	    <servlet-class>org.mitre.dsmiley.httpproxy.ProxyServlet</servlet-class>
+	    <init-param>
+	        <param-name>targetUri</param-name>
+	        <param-value>http://172.21.15.175:8080/WechatNLP/coreServlet</param-value>
+	    </init-param>
+	    <init-param>
+	        <param-name>log</param-name>
+	        <param-value>true</param-value>
+	    </init-param>
+	</servlet>
 
+	<servlet-mapping>
+	    <servlet-name>wechatServlet</servlet-name>
+	    <url-pattern>/wechat/*</url-pattern>
+	</servlet-mapping>
+	
 	<servlet>
 		<servlet-name>springServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
