--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #oracle database settings
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@172.21.7.9:1521:bjutailib
+jdbc.url=jdbc:oracle:thin:@172.21.15.6:1521:bjutailib
 jdbc.username=bjut
-jdbc.password=bjut
+jdbc.password=Bjut123456
 jdbc.pool.maxIdle=10
 jdbc.pool.maxActive=50
